[SYNCOPE-1804] Enabling integration tests (with some hopefully temporary exclusions)